skills container items alignment fixed

--- a/src/mobile.scss
+++ b/src/mobile.scss
@@ -223,6 +223,9 @@
         width: 100%;
         align-items: center;
         .skills-container {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
           width: 80svw;
           margin: 0;
           padding: 16px;
